--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -8,3 +8,5 @@ NotEmpty.optionResource.title=title is required
 
 ValidationError=Ensure that you provide the accurate and complete values in the request.
 InternalError=An internal error has occurred: {0}
+Unauthorized=No access token provided
+Forbidden=Do not have appropriate permissions
